fix GLASSFISH-21592 [JDK9-GF] restart-domain command is failing in JDK9
svn path=/branches/gf-jdk9/; revision=64346


Former-commit-id: 3f567ccdf62ab8ef78ca15453d129740a47140bf